--- a/public/client.html
+++ b/public/client.html
@@ -1,228 +1,12 @@
-<html lang="en"><head>
-
-    <!--bootstrap CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <!-- CSS -->
-    <style>
-        .copyright-text {
-            margin: 0
-        }
-
-        @media (max-width:991px) {
-            .site-footer [class^=col-] {
-                margin-bottom: 30px
-            }
-        }
-
-        @media (max-width:767px) {
-            .site-footer {
-                padding-bottom: 0
-            }
-
-            .site-footer .copyright-text,
-            .site-footer .social-icons {
-                text-align: center
-            }
-        }
-
-        .carousel-caption {
-            top: 0;
-            left: 0;
-            bottom: auto;
-        }
-
-        .carousel-caption {
-            top: 0;
-            max-width: 100%;
-            width: 100%;
-            max-height: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            left: 0;
-            text-align: left;
-        }
-
-        /*Carousel clients */
-
-        .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 30%;
-        }
-
-        .sr-color {
-            color: blue;
-        }
-
-        /*indicators*/
-
-        .slide-resize {
-            margin-bottom: 1px;
-        }
-    </style>
-<div class="carousel-caption d-md-flex">
-    <div class="align-self-center ml-5 d-none d-lg-block" style="padding-left:22em;">
-        <h1 class="text-center"><b>Maruthi Gardens</b></h1>
-        <h4 class="ml-3"> Maruthi Gardens .</h4>
-        <div class="d-none d-lg-block">
-            <div style="padding-left:20%;">
-                <a class="btn btn-primary btn-lg" role="button" href="/about.html">About us
-                    »</a>
-            </div>
-        </div>
-    </div>
-    <!-- Mobile view -->
-    <div class="align-self-center ml-5 d-lg-none py-3" style="padding-right:5% ">
-        <h5 style="font-size:20px; padding-left:1em;"><b>Maruthi Gardens</b></h5>
-        <h6 class="ml-3">Maruthi Gardens</h6>
-        <div style="padding-left:30%;">
-            <a href="/about.html" class="btn btn-primary btn-sm" role="button">About us »</a>
-        </div>
-    </div>
-</div>
-
-
-
-
-    <!--Font Awesome Font-->
-    <script src="https://kit.fontawesome.com/bb93e6cac8.js" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">/*!
- * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- */@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.svg#fontawesome) format("svg")}@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.svg#fontawesome) format("svg")}@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.svg#fontawesome) format("svg");unicode-range:U+f004-f005,U+f007,U+f017,U+f022,U+f024,U+f02e,U+f03e,U+f044,U+f057-f059,U+f06e,U+f070,U+f075,U+f07b-f07c,U+f080,U+f086,U+f089,U+f094,U+f09d,U+f0a0,U+f0a4-f0a7,U+f0c5,U+f0c7-f0c8,U+f0e0,U+f0eb,U+f0f3,U+f0f8,U+f0fe,U+f111,U+f118-f11a,U+f11c,U+f133,U+f144,U+f146,U+f14a,U+f14d-f14e,U+f150-f152,U+f15b-f15c,U+f164-f165,U+f185-f186,U+f191-f192,U+f1ad,U+f1c1-f1c9,U+f1cd,U+f1d8,U+f1e3,U+f1ea,U+f1f6,U+f1f9,U+f20a,U+f247-f249,U+f24d,U+f254-f25b,U+f25d,U+f271-f274,U+f279,U+f28b,U+f28d,U+f2b5-f2b6,U+f2b9,U+f2bb,U+f2bd,U+f2c1-f2c2,U+f2d0,U+f2d2,U+f2dc,U+f2ed,U+f3a5,U+f3d1,U+f410}@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.svg#fontawesome) format("svg");unicode-range:U+f003,U+f006,U+f014,U+f016,U+f01a-f01b,U+f01d,U+f040,U+f045-f047,U+f05c-f05d,U+f07d-f07e,U+f087-f088,U+f08a-f08b,U+f08e,U+f090,U+f096-f097,U+f0a2,U+f0e4-f0e6,U+f0ec-f0ee,U+f0f5-f0f7,U+f10c,U+f112,U+f114-f115,U+f11d,U+f123,U+f132,U+f145,U+f147-f149,U+f14c,U+f166,U+f16a,U+f172,U+f175-f178,U+f18e,U+f190,U+f196,U+f1b1,U+f1d9,U+f1db,U+f1f7,U+f20c,U+f219,U+f230,U+f24a,U+f250,U+f278,U+f27b,U+f283,U+f28c,U+f28e,U+f29b-f29c,U+f2b7,U+f2ba,U+f2bc,U+f2be,U+f2c0,U+f2c3,U+f2d3-f2d4}</style><style media="all" id="fa-v4-shims">/*!
- * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- 
- * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
-
-
-    <!--Custom stylesheet-->
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maruthi Gardens</title>
-    <style>
-        body {
-            background-image: linear-gradient(45deg, #ff0000, #0000ff);
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            background-color: #333;
-            padding: 20px;
-        }
-
-        header h1 {
-            margin: 0;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            max-width: 400px;
-        }
-
-        label {
-            margin-bottom: 5px;
-        }
-
-        input, select, textarea {
-            margin-bottom: 20px;
-            padding: 5px;
-        }
-
-        button {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #555;
-        }
-
-        footer {
-            background-color: #333;
-            padding: 20px;
-            text-align: center;
-        }
-    </style>
+    <title>Welcome to Express</title>
 </head>
 <body>
-    <header>
-        <h1>Maruthi Gardens</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <h2>Welcome to Our Maruthi Gardens</h2>
-            <p>We offer the perfect venue for your events. Whether it's a wedding, birthday party, or corporate event, we have the space and facilities to make your event memorable.</p>
-            <a href="booking.html" class="btn">Book Now</a>
-        </section>
-    </main>
-    <main>
-        <section>
-            <h2>Booking Form</h2>
-            <p>Please fill out the form below to make a booking:</p>
-            <form action="submit_booking_form.php" method="post">
-                <label for="event">Event Type:</label>
-                <select id="event" name="event" required>
-                    <option value="wedding">Wedding</option>
-                    <option value="birthday">Birthday Party</option>
-                    <option value="corporate">Corporate Event</option>
-                    <option value="other">Other</option>
-                </select>
-                <label for="date">Date:</label>
-                <input type="date" id="date" name="date" required>
-                <label for="time">Time:</label>
-                <input type="time" id="time" name="time" required>
-                <label for="guests">Number of Guests:</label>
-                <input type="number" id="guests" name="guests" required>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Function Hall. All rights reserved.</p>
-    </footer>
+    <h1>Welcome to Express</h1>
+    <p>This is a simple HTML page generated using Express.</p>
 </body>
 </html>
